# efficientnet

./: .gitignore  LICENSE  README.md  __main__.py  abseil.py  border.py  cli.py  data.py  layers.py  pyproject.toml  requirements.txt  setup.py  test.py  train.py  utils.py
border/: border.py  efficientnet.py  layers.py  test.py  train.py
cli/: __main__.py  data.py  remote.py  test.py  train.py  utils.py
efficientnet/: abseil.py  base.py  border.py  cli.py  efficientnet.py  mbconv.py  preprocessing.py  simple.py  test.py  train.py  trainer.py  trainers.py  utils.py
efficientnet/border/: train.py
models/: train.py  utils.py
models/border/: border.py  layers.py  test.py  train.py
models/efficientnet/: efficientnet.py  mbconv.py  train.py
models/simple/: train.py
preprocessing/: adjust.py  augment.py  base.py  randaugment.py  transform.py
simple/: train.py
src/: base.py  border.py  efficientnet.py  mbconv.py  preprocessing.py  ref_coco.py  simple.py  test.py  trainers.py  unet.py  utils.py
src/efficientnet/: __main__.py  base.py  border.py  color.py  preprocessing.py  ref_coco.py  simple.py  test.py  trainers.py  unet.py  utils.py
